<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:gravity="left"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingTop="30dp"
        android:paddingRight="25dp"
        android:paddingBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_title_register"
            android:textColor="@color/color_black"
            android:textSize="@dimen/size25"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_classify_account"
            android:textColor="@color/color_black"
            android:textSize="@dimen/size16" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/radio_option_1"
                android:checked="true"
                android:buttonTint="@color/color_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_option1"
                android:textColor="@color/color_black"
                android:textSize="@dimen/size14" />

            <RadioButton
                android:id="@+id/radio_option_2"
                android:checked="true"
                android:buttonTint="@color/color_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt_option2"
                android:textColor="@color/color_black"
                android:textSize="@dimen/size14" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_birthday"
            android:textColor="@color/color_black"
            android:textSize="@dimen/size18" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/datetime"
                android:background="@drawable/boder_editext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="YYYY/MM/DD"
                android:textSize="@dimen/size16" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_email_register"
            android:textColor="@color/color_black"
            android:textSize="@dimen/size18" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/boder_editext"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_phone_register"
            android:textColor="@color/color_black"
            android:textSize="@dimen/size18" />

        <EditText
            android:id="@+id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/boder_editext"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_pass"
            android:textColor="@color/color_black"
            android:textSize="@dimen/size18" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/boder_editext"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_confirm_pass"
            android:textColor="@color/color_black"
            android:textSize="@dimen/size18" />

        <EditText
            android:id="@+id/confirmpass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/boder_editext"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:text="@string/txt_full_text"
            android:textColor="@color/color_red"
            android:textSize="@dimen/size14" />

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/boder_button"
            android:text="@string/txt_get_creadit"
            android:textColor="@color/color_white"
            android:textSize="15dp" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>