<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white">

   <com.teamwork.businessguideprofortiktok.src.models.canvas.CanVasBoderBlue
       android:layout_width="match_parent"
       android:layout_height="100dp"
       android:layout_marginTop="5dp"
       />
   <com.teamwork.businessguideprofortiktok.src.models.canvas.CanVasBoder
       android:layout_width="match_parent"
       android:layout_height="100dp"
       />
   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="vertical"
       android:paddingLeft="@dimen/size20"
       android:paddingRight="@dimen/size20"
       android:layout_marginTop="80dp"
       android:gravity="center_horizontal"
       android:layout_height="wrap_content">
      <TextView
       android:layout_width="wrap_content"
       android:text="@string/txt_introduce_2_1"
       android:textSize="@dimen/size18"
       android:textStyle="bold"
       android:textColor="@color/color_black"
       android:layout_height="wrap_content"/>
      <TextView
          android:layout_width="match_parent"
          android:text="@string/txt_introduce_2_2"
          android:textSize="@dimen/size14"
          android:gravity="center"
          android:layout_marginTop="@dimen/size20"
          android:textColor="@color/color_black"
          android:layout_height="wrap_content"/>

      <TextView
          android:layout_width="match_parent"
          android:text="@string/txt_introduce_2_3"
          android:textSize="@dimen/size14"
          android:gravity="center"
          android:layout_marginTop="@dimen/size20"
          android:textColor="@color/color_black"
          android:layout_height="wrap_content"/>
      <Button
          android:id="@+id/btn_get_create"
          android:layout_width="wrap_content"
          android:layout_below="@+id/txt_content_introduce1"
          android:layout_height="35dp"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="@dimen/size20"
          android:background="@drawable/boder_button"
          android:text="@string/txt_get_creadit"
          android:textColor="@color/color_white"
          android:textSize="@dimen/size14" />
      <TextView
          android:layout_width="match_parent"
          android:text="@string/txt_introduce_2_4"
          android:textSize="@dimen/size18"
          android:textStyle="bold"
          android:gravity="center"
          android:layout_marginTop="@dimen/size30"
          android:textColor="@color/color_black"
          android:layout_height="wrap_content"/>
      <ImageView
          android:layout_width="300dp"
          android:layout_height="200dp"
          android:layout_marginTop="@dimen/size30"
          android:scaleType="fitXY"
         android:src="@drawable/img_money"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="@dimen/size12"
          android:gravity="center"
          android:layout_marginTop="@dimen/size20"
          android:textColor="@color/color_black"
         android:text="@string/txt_introduce_2_5"/>
   </LinearLayout>
</RelativeLayout>