<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:gravity="left"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingTop="30dp"
    android:paddingRight="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_signin"
        android:textColor="@color/color_black"
        android:textSize="@dimen/size25"
        android:textStyle="bold" />

    <ImageView
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:src="@drawable/avatar_lognin"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/txt_mail_or_phone"
        android:textColor="@color/color_black"
        android:textSize="@dimen/size16" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/boder_editext"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_pass"
        android:textColor="@color/color_black"
        android:textSize="@dimen/size16" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/boder_editext"
        android:inputType="textPassword" />

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/txt_full_text"
        android:textColor="@color/color_red"
        android:textSize="@dimen/size14" />

    <Button
        android:id="@+id/btn_get_create"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/boder_button"
        android:text="@string/txt_signin_priview"
        android:textColor="@color/color_white"
        android:textSize="15dp" />
</LinearLayout>