<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/size20"
        android:orientation="vertical"
        android:paddingRight="@dimen/size20"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/txt_introduce_5_1"
            android:textSize="@dimen/size18"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/size20"
            android:textColor="@color/color_black"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/size30"
            android:scaleType="fitXY"
            android:src="@drawable/img_website"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/txt_introduce_5_2"
            android:textSize="@dimen/size18"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/size20"
            android:textColor="@color/color_black"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size12"
            android:gravity="center"
            android:layout_marginTop="@dimen/size20"
            android:textColor="@color/color_black"
            android:text="@string/txt_introduce_5_3"/>
        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/size30"
            android:scaleType="fitXY"
            android:src="@drawable/img_appinstall"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/txt_introduce_5_4"
            android:textSize="@dimen/size18"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/size20"
            android:textColor="@color/color_black"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size12"
            android:gravity="center"
            android:layout_marginTop="@dimen/size20"
            android:textColor="@color/color_black"
            android:text="@string/txt_introduce_5_5"/>

    </LinearLayout>

</LinearLayout>