<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/size20"
        android:orientation="vertical"
        android:paddingRight="@dimen/size20"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/size30"
            android:scaleType="fitXY"
            android:src="@drawable/img_develope"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size12"
            android:gravity="center"
            android:layout_marginTop="@dimen/size20"
            android:textColor="@color/color_black"
            android:text="@string/txt_introduce_3_1"/>
        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/size30"
            android:scaleType="fitXY"
            android:src="@drawable/img_group"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size12"
            android:gravity="center"
            android:layout_marginTop="@dimen/size20"
            android:textColor="@color/color_black"
            android:text="@string/txt_introduce_3_2"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="@dimen/size20"
        android:paddingRight="@dimen/size20"
        android:paddingLeft="@dimen/size20"
        android:background="#DDDADA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/size30"
            android:text="@string/txt_introduce_3_3"
            android:textColor="@color/color_black"
            android:layout_marginTop="@dimen/size20"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size18"
            android:layout_marginTop="@dimen/size20"
            android:textColor="@color/color_black"
            android:text="@string/txt_introduce_3_4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size18"
            android:layout_marginTop="@dimen/size20"
            android:textColor="@color/color_black"
            android:text="@string/txt_introduce_3_5"/>
    </LinearLayout>

</LinearLayout>