<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/size14"
    android:paddingRight="@dimen/size14"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/size20"
    android:background="@color/color_black"
    >

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_centerVertical="true"
            android:textSize="@dimen/size12"
            android:textColor="#fff"
            android:textStyle="bold"
            android:text="@string/app_name"/>
        <Button
            android:id="@+id/btn_sigin_out"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/boder_signin"
            android:text="@string/txt_signout"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/size12"
            android:onClick="logout"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/txt_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/txt_title_loginfb"
        android:textColor="@color/color_white"
        android:textSize="@dimen/size20"
        android:textStyle="bold" />
    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/icon_money"/>
    <TextView
        android:id="@+id/txtMoney"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_3000"
        android:textStyle="bold"
        android:textColor="@color/color_blue"
        android:textSize="@dimen/size30"/>

    <LinearLayout
        android:layout_marginTop="@dimen/size20"
        android:orientation="vertical"
        android:background="@drawable/boder_text_fb"
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <TextView
            android:padding="@dimen/size10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_content_code"
            android:textColor="@color/color_white"
            android:textSize="@dimen/size14"/>
        <TextView
            android:padding="@dimen/size10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Your_voucher_code"
            android:textColor="@color/color_white"
            android:textSize="@dimen/size14"/>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtRandom"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size30"
                android:textSize="@dimen/size25"
                android:textColor="@color/color_white"
                android:text="TEST"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            <ImageView
                android:id="@+id/imgCopy"
                android:layout_marginLeft="@dimen/size20"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size30"
                android:src="@drawable/ic_copy"/>

        </LinearLayout>
    </LinearLayout>



</LinearLayout>