<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black"
    android:gravity="center_horizontal"
    android:orientation="vertical">
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="10dp"
             android:gravity="center">

         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:text="@string/app_name"
                 android:textColor="@color/color_white"
                 android:textSize="@dimen/size14"
                 android:textStyle="bold" />


     </RelativeLayout>

     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:text="@string/txt_title_priview01"
             android:textColor="@color/color_white"
             android:textSize="@dimen/size18"
             android:textStyle="bold" />

     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="10dp"
             android:text="@string/txt_title_priview02"
             android:textColor="@color/color_white"
             android:textSize="@dimen/size12" />

     <Button
             android:id="@+id/btn_get_create"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:layout_marginTop="35dp"
             android:background="@drawable/boder_button"
             android:text="@string/txt_get_creadit"
             android:textColor="@color/color_white"
             android:textSize="13dp" />

     <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="70dp"
             android:layout_marginTop="30dp"
             android:scaleType="fitXY"
             android:layout_marginRight="70dp"
             android:layout_marginBottom="20dp"
             android:src="@drawable/avatar_priview" />
 </LinearLayout>
