<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_black"
    android:paddingLeft="@dimen/size10"
    android:paddingRight="@dimen/size10">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/size10"
        android:paddingRight="@dimen/size10"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_title_priview01"
            android:textColor="@color/color_white"
            android:layout_marginTop="@dimen/size18"
            android:textSize="@dimen/size18"
            android:id="@+id/txt_title_introduce1"
            android:layout_centerHorizontal="true"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_content_introduce1"
            android:layout_below="@+id/txt_title_introduce1"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/txt_title_priview02"
            android:textColor="@color/color_white"
            android:textSize="@dimen/size12" />

        <Button
            android:id="@+id/btn_get_create"
            android:layout_width="wrap_content"
            android:layout_below="@+id/txt_content_introduce1"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/boder_button"
            android:text="@string/txt_get_creadit"
            android:textColor="@color/color_white"
            android:textSize="@dimen/size14" />


    </RelativeLayout>


</ScrollView>
