<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="@dimen/size20"
        android:paddingRight="@dimen/size20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/size30"
            android:scaleType="fitXY"
            android:src="@drawable/img_chart"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/txt_introduce_6_1"
            android:textSize="@dimen/size18"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/size20"
            android:textColor="@color/color_black"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size12"
            android:gravity="center"
            android:layout_marginTop="@dimen/size20"
            android:textColor="@color/color_black"
            android:text="@string/txt_introduce_6_2"/>
        <Button
            android:id="@+id/btn_get_create"
            android:layout_width="wrap_content"
            android:layout_below="@+id/txt_content_introduce1"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/size20"
            android:background="@drawable/boder_button"
            android:text="@string/txt_get_creadit"
            android:layout_marginBottom="@dimen/size20"
            android:textColor="@color/color_white"
            android:textSize="@dimen/size14" />
    </LinearLayout>

</LinearLayout>